<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text=""
            android:textAlignment="textEnd"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="textEnd"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/material_dynamic_tertiary40"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/button_ac"
                android:textSize="24dp" />

            <Button
                android:id="@+id/buttonParantheses"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_parantheses"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonModulas"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_modulus"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonDevide"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/button_devide"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/numbutton7"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_seven"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton8"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_eight"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton9"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_nine"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/button_multiiply"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/numbutton4"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_four"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton5"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_fiive"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton6"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_six"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/button_minus"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/numbutton3"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_three"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton2"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_two"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/numbutton1"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_one"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/button_add"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/numbutton0"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_num_zero"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonDecimal"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_decimal"
                android:textSize="24dp"/>

            <Button
                android:id="@+id/buttonBackspace"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="88dp"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text=" "
                app:icon="@drawable/backspace"
                app:iconGravity="textStart"
                app:iconSize="34dp" />

            <Button
                android:id="@+id/buttonResult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/button_result"
                android:textSize="24dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
